--- a/djangoApp/myapp/templates/index.html
+++ b/djangoApp/myapp/templates/index.html
@@ -9,7 +9,7 @@
 
 </head>
 <body>
-<form method="POST"class="post-form"enctype="multipart/form-data">
+<!--<form method="POST"class="post-form"enctype="multipart/form-data">
     {% csrf_token %}
     {{form.as_p}}
     <button type="submit"class="save btn btn-default">Save</button>
@@ -26,5 +26,7 @@
     <input type="submit" value="Test">
 </form>
 -->
+<button type="button"onclick="location.href='/login'">Login</button>
+
 </body>
 </html>
