--- a/djangoApp/myapp/templates/login.html
+++ b/djangoApp/myapp/templates/login.html
@@ -9,6 +9,7 @@
     Enter your email:<input type="text">
     <br>
     Enter your password:<input type="text">
+    <br>SSSS
     <button type="button">LOGIN</button>
 </form>
 </body>
