--- a/djangoApp/myapp/templates/index.html
+++ b/djangoApp/myapp/templates/index.html
@@ -27,6 +27,9 @@
 </form>
 -->
 <button type="button"onclick="location.href='/login'">Login</button>
-
+<br>
+<button type="button"onclick="location.href='/signup'">Signup</button>
+<br>
+<button type="button"onclick="location.href='/pro'">Profile</button>
 </body>
 </html>
